--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,9 +22,9 @@
             {% block navigation %}
                 <nav>
                     <ul class="navigation">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="{{ path('AlmosBundle_homepage') }}">Home</a></li>
                         <li><a href="#">New</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="{{ path('AlmosBundle_about') }}">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -32,8 +32,8 @@
         </div>
 
         <hgroup>
-            <h2>{% block blog_title %}<a href="#">The Problem</a>{% endblock %}</h2>
-            <h3>{% block blog_tagline %}<a href="#">Have a problem?</a>{% endblock %}</h3>
+            <h2>{% block blog_title %}<a href="{{ path('AlmosBundle_homepage') }}">The Problem</a>{% endblock %}</h2>
+            <h3>{% block blog_tagline %}<a href="{{ path('AlmosBundle_homepage') }}">Have a problem?</a>{% endblock %}</h3>
         </hgroup>
     </header>
 
