--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,7 @@
                         <li><a href="{{ path('AlmosBundle_homepage') }}">Home</a></li>
                         <li><a href="#">New</a></li>
                         <li><a href="{{ path('AlmosBundle_about') }}">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="{{ path('AlmosBundle_contact') }}">Contact</a></li>
                     </ul>
                 </nav>
             {% endblock %}
