Add SwiftMailer in contact form.

--- a/src/AlmosBundle/Resources/views/Page/contact.html.twig
+++ b/src/AlmosBundle/Resources/views/Page/contact.html.twig
@@ -8,6 +8,12 @@
         <h1>contact us</h1>
     </header>
 
+    {% for flashMessage in app.session.flashbag.get('blogger-notice') %}
+        <div class="blogger-notice">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
+
     <p>To contact us, please fill in the form below:</p>
 
     <form action="{{ path('AlmosBundle_contact') }}" method="post" {{ form_enctype(form) }} class="blogger">
