Add Entity Question. Add DataFixtures Bundle. Create database. Completed database some test date. Add some css style.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,9 +23,10 @@
                 <nav>
                     <ul class="navigation">
                         <li><a href="{{ path('AlmosBundle_homepage') }}">Home</a></li>
-                        <li><a href="#">New</a></li>
+                        <li><a href="#">New question</a></li>
                         <li><a href="{{ path('AlmosBundle_about') }}">About</a></li>
                         <li><a href="{{ path('AlmosBundle_contact') }}">Contact</a></li>
+                        <li><a href="#">Blog</a></li>
                     </ul>
                 </nav>
             {% endblock %}
