Add QuestionRepository. Request to db.

--- a/src/AlmosBundle/Resources/views/Page/index.html.twig
+++ b/src/AlmosBundle/Resources/views/Page/index.html.twig
@@ -2,5 +2,26 @@
 {% extends 'AlmosBundle::layout.html.twig' %}
 
 {% block body %}
-    Blog homepage
+    {% for question in questions %}
+        <article class="blog">
+            <div class="date"><time datetime="{{ question.created|date('c') }}">{{ question.created|date('l, F j, Y') }}</time></div>
+            <header>
+                <h2><a href="{{ path('AlmosBundle_question_show', { 'id': question.id }) }}">{{ question.title }}</a></h2>
+            </header>
+
+
+            <div class="snippet">
+                <p>{{ question.message(50) }}</p>
+                <p class="continue"><a href="{{ path('AlmosBundle_question_show', { 'id': question.id }) }}">Continue reading...</a></p>
+            </div>
+
+            <footer class="meta">
+                <p>Комментарии: -</p>
+                <p>Автор <span class="highlight">{{question.author}}</span>, {{ question.created|date('h:iA') }}.</p>
+                <p>Теги: <span class="highlight">{{ question.tags }}</span></p>
+            </footer>
+        </article>
+    {% else %}
+        <p>There are no blog entries for symblog</p>
+    {% endfor %}
 {% endblock %}
