--- a/src/AlmosBundle/Resources/views/Question/show.html.twig
+++ b/src/AlmosBundle/Resources/views/Question/show.html.twig
@@ -13,4 +13,12 @@
             <p>{{ quest.message }}</p>
         </div>
     </article>
+
+    <section class="comments" id="comments">
+        <section class="previous-comments">
+            <h3>Comments</h3>
+            {% include 'AlmosBundle:Comment:index.html.twig' with { 'comments': comments } %}
+        </section>
+    </section>
+
 {% endblock %}
