--- a/src/AlmosBundle/Resources/views/Question/show.html.twig
+++ b/src/AlmosBundle/Resources/views/Question/show.html.twig
@@ -19,6 +19,11 @@
             <h3>Comments</h3>
             {% include 'AlmosBundle:Comment:index.html.twig' with { 'comments': comments } %}
         </section>
+
+        <h3>Add Comment</h3>
+        {{ render(controller( 'AlmosBundle:Comment:new', { 'question_id': 22 } )) }}
+
+
     </section>
 
 {% endblock %}
