--- a/src/AlmosBundle/Resources/views/Question/show.html.twig
+++ b/src/AlmosBundle/Resources/views/Question/show.html.twig
@@ -21,7 +21,7 @@
         </section>
 
         <h3>Add Comment</h3>
-        {{ render(controller( 'AlmosBundle:Comment:new', { 'question_id': 22 } )) }}
+        {{ render(controller( 'AlmosBundle:Comment:new', { 'question_id': quest.id } )) }}
 
 
     </section>
