--- a/src/AlmosBundle/Resources/views/Page/index.html.twig
+++ b/src/AlmosBundle/Resources/views/Page/index.html.twig
@@ -11,12 +11,12 @@
 
 
             <div class="snippet">
-                <p>{{ question.message(200) }}</p>
+                <p>{{ question.message(500) }}</p>
                 <p class="continue"><a href="{{ path('AlmosBundle_question_show', { 'id': question.id }) }}">Continue reading...</a></p>
             </div>
 
             <footer class="meta">
-                <p>Комментарии: -</p>
+                <p>Комментарии:  {{ question.comments|length }}</p>
                 <p>Автор <span class="highlight">{{question.author}}</span>, {{ question.created|date('h:iA') }}.</p>
                 <p>Теги: <span class="highlight">{{ question.tags }}</span></p>
             </footer>
