--- a/src/AlmosBundle/Resources/views/Question/show.html.twig
+++ b/src/AlmosBundle/Resources/views/Question/show.html.twig
@@ -1,27 +1,28 @@
 {% extends 'AlmosBundle::layout.html.twig' %}
 
-{% block title %}{{ quest.title }}{% endblock %}
+{% block title %}{{ blog.title }}{% endblock %}
 
 {% block body %}
     <article class="blog">
         <header>
-            <div class="date"><time datetime="{{ quest.created|date('c') }}">{{ quest.created|date('l, F j, Y') }}</time></div>
-            <h2>{{ quest.title }}</h2>
+            <div class="date"><time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
+            <h2>{{ blog.title }}</h2>
         </header>
        {# <img src="{{ asset(['images/', blog.image]|join) }}" alt="{{ blog.title }} image not found" class="large" /> #}
         <div>
-            <p>{{ quest.message }}</p>
+            <p>{{ blog.message }}</p>
         </div>
     </article>
 
     <section class="comments" id="comments">
         <section class="previous-comments">
             <h3>Comments</h3>
-            {% include 'AlmosBundle:Comment:index.html.twig' with { 'comments': comments } %}
+           {% include 'AlmosBundle:Comment:index.html.twig' with { 'comments': comments } %}
         </section>
 
         <h3>Add Comment</h3>
-        {{ render(controller( 'AlmosBundle:Comment:new', { 'question_id': quest.id } )) }}
+
+        {#{{ render(controller( 'AlmosBundle:Comment:create', { 'question_id': blog.id } )) }}#}
 
 
     </section>
